# photo_fit

./: .gitignore  CMakeLists.txt  Makefile  combined_fit.pro  config.txt  import_data.nb  input_gen.nb  input_gen.py  log.out  parameters.txt  script.sh
.hg/: dirstate
plot/: import_data.nb  plot.py  plot2.py
src/: ArrayCrxOp.cc  ArrayCrxOp.h  ArrayGenotype.cc  ArrayGenotype.h  ArrayMutOp.cc  ArrayMutOp.h  EvalOp.cc  EvalOp.h  GaussMutOp.cc  GaussMutOp.h  GaussianFitFunctor.cpp  GaussianFitFunctor.h  MinEvalOp.cpp  MinEvalOp.h  MyFloatingPoint.cc  MyFloatingPoint.h  RandomArray.h  RandomNumbers.cc  RandomNumbers.h  basis.cpp  basis.h  control_data.cpp  control_data.h  gaussian_functor.cpp  gaussian_functor.h  main.cpp  procedures.cpp  procedures.h  utils.cpp  utils.h
src/ecf_extension/: EvalOp.cpp  EvalOp.h  GaussMutOp.cpp  GaussMutOp.h  MyFloatingPoint.cpp  MyFloatingPoint.h
